# opener

./: .gitignore  Cargo.toml  LICENSE  Program.cs  README.md  config.json.example  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  sonar.yml
opener/: main.py
src/: main.rs
tests/: test_main.py
