[tool.poetry]
name = "tray_app"
version = "0.1.0"
description = "A Python application that creates a Windows 11 system tray icon."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pystray = "^0.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
